// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BikeStorage it renders 1`] = `
Array [
  <h3
    aria-controls="panel-bikes"
    aria-expanded={false}
    className="c-expandable-block__header"
    id="header-bikes"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="button"
    tabIndex={0}
  >
    <span
      aria-hidden="true"
      className="notranslate c-expandable-block__header-icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    <div
      className="c-expandable-block__header-text"
    >
      Bikes
      <span
        className="fa c-expandable-block__header-caret"
        dangerouslySetInnerHTML={
          Object {
            "__html": "&#xF107;",
          }
        }
      />
    </div>
  </h3>,
  <noscript>
    <style>
      #header-bikes { display: none; }
    </style>
    <h3
      className="c-expandable-block__header"
    >
      <span
        aria-hidden="true"
        className="notranslate c-expandable-block__header-icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
      Bikes
      <span
        className="fa c-expandable-block__header-caret"
        dangerouslySetInnerHTML={
          Object {
            "__html": "&#xF106;",
          }
        }
      />
    </h3>
    <div
      className="c-expandable-block__panel"
      role="region"
    >
      <p>
        South Station has the following bike storage features:
      </p>
      <ul
        className="c-unordered-list"
      >
        <div>
          <li
            className="c-unordered-list-item"
          >
            Pedal and Park
          </li>
          <div
            className="m-stop-page__pedal-and-park"
          >
            Access to secure bike parking is available for registered CharlieCard holders.
            <div>
              <a
                href="https://bc.mbta.com/riding_the_t/bikes/register/Default.asp"
              >
                Register your CharlieCard for bike parking
              </a>
            </div>
          </div>
        </div>
        <li
          className="c-unordered-list-item"
        >
          Regular bike racks
        </li>
        <li
          className="c-unordered-list-item"
        >
          Covered bike racks
        </li>
      </ul>
      <a
        className="c-call-to-action"
        href="/bikes"
      >
        Learn more about bikes and the T
      </a>
    </div>
  </noscript>,
]
`;

exports[`BikeStorage via enzyme-to-json it displays parking info when opened and inner html 1`] = `
<BikeStorageInfo>
  <ExpandableBlock>
    <h3
      aria-controls="panel-bikes"
      aria-expanded={true}
      className="c-expandable-block__header"
      id="header-bikes"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <span
        aria-hidden="true"
        className="notranslate c-expandable-block__header-icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
      <div
        className="c-expandable-block__header-text"
      >
        Bikes
        <span
          className="fa c-expandable-block__header-caret"
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#xF106;",
            }
          }
        />
      </div>
    </h3>
    <div
      aria-labelledby="header-bikes"
      className="c-expandable-block__panel "
      id="panel-bikes"
      role="region"
      tabIndex={0}
    >
      <p>
        South Station has the following bike storage features:
      </p>
      <ul
        className="c-unordered-list"
      >
        <div
          key="pedal-and-park"
        >
          <li
            className="c-unordered-list-item"
          >
            Pedal and Park
          </li>
          <div
            className="m-stop-page__pedal-and-park"
          >
            Access to secure bike parking is available for registered CharlieCard holders.
            <div>
              <a
                href="https://bc.mbta.com/riding_the_t/bikes/register/Default.asp"
              >
                Register your CharlieCard for bike parking
              </a>
            </div>
          </div>
        </div>
        <li
          className="c-unordered-list-item"
          key="bike_storage_rack"
        >
          Regular bike racks
        </li>
        <li
          className="c-unordered-list-item"
          key="bike_storage_rack_covered"
        >
          Covered bike racks
        </li>
      </ul>
      <a
        className="c-call-to-action"
        href="/bikes"
      >
        Learn more about bikes and the T
      </a>
    </div>
    <noscript>
      <style />
      <h3
        className="c-expandable-block__header"
      />
      <div
        className="c-expandable-block__panel"
        role="region"
      />
    </noscript>
  </ExpandableBlock>
</BikeStorageInfo>
`;
